tests/specs/ecosystem/denosaurs/log/0_0_11.test
denosaurs/log/0.0.11
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:@types/fast-redact@3": "npm:@types/fast-redact@3.0.4"
    },
    "npm": {
      "@types/fast-redact@3.0.4": {
        "integrity": "sha512-tgGJaXucrCH4Yx2l/AI6e/JQksZhKGIQsVwBMTh+nxUhQDv5tXScTs5DHTw+qSKDXnHL2dTAh1e2rd5pcFQyNQ==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'ReadableStream<Log>'.
  cancel(reason?: any): Promise<void> {
  ~~~~~~
    at file://<tmpdir>/mod.ts:105:3

error: Type checking failed.

